commit changes done but not working